syntax = "proto3";

package khepri.horus;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "khepri/horus/horus.proto";

option go_package = "khepri.dev/horus/ent/proto/khepri/horus";

service AuthService {
	rpc BasicSignUp(BasicSignUpRequest) returns (BasicSignUpRseponse);
	rpc BasicSignIn(BasicSignInRequest) returns (BasicSignInRseponse);
}

message BasicSignUpRequest {
	string username = 1;
	string password = 2;
}

message BasicSignUpRseponse {
	Token token = 1;
}

message BasicSignInRequest {
	string username = 1;
	string password = 2;
}

message BasicSignInRseponse {
	Token token = 1;
}
